Make the logo display correctly
The logo has display: flex for some reason, this makes the logo display
distorted. This small css fix will resolve this.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -10,3 +10,7 @@
     }
   }
 }
+
+.logo {
+  display: block;
+}
